--- a/app/src/main/res/layout/fragment_foo.xml
+++ b/app/src/main/res/layout/fragment_foo.xml
@@ -9,6 +9,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="This is foo fragment" />
+        android:text="Thao handsome" />
 
 </LinearLayout>
