--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -4,12 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/view_pager"
-        android:background="#fcc203"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    tools:context=".IntroActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
